Add cadenza-client
